Bang Cuu Chuong

--- a/B11. Cấu trúc lặp 2/Bài tập/[Bài tập] Luyện tập vòng lặp 01/bt1_5.html
+++ b/B11. Cấu trúc lặp 2/Bài tập/[Bài tập] Luyện tập vòng lặp 01/bt1_5.html
@@ -14,10 +14,11 @@
             document.write(a + "<br>" + b + "<br>");
             for (; count < 18; count ++) {
                 c = a + b;
+                total = total + c;
                 document.write(c + "<br>");
                 a = b;
                 b = c;
-                total = total + b;
+
             }
             document.write("Tổng 20 số là: " + total);
 
