--- a/B11. Cấu trúc lặp 2/Bài tập/[Bài tập] Luyện tập vòng lặp 01/doan_so.html
+++ b/B11. Cấu trúc lặp 2/Bài tập/[Bài tập] Luyện tập vòng lặp 01/doan_so.html
@@ -17,7 +17,7 @@
 
             let user = parseInt(prompt("nhập một số từ 1 đến 100"));
 
-            let auto = Math.floor(Math.random() * 100);
+            let auto = Math.floor(Math.random() * 100 + 1 );
 
             if (user === auto) {
                 alert("Chuc mung, ban da doan trung");
