--- a/B5. HTML Form & Table/Thực hành/Tìm kiếm google/timkiemgoogle.html
+++ b/B5. HTML Form & Table/Thực hành/Tìm kiếm google/timkiemgoogle.html
@@ -5,7 +5,7 @@
     <title>google</title>
 </head>
 <body>
-<form method="get" action="http://www.google.com/search">
+<form method="get" action="http://www.bing.com/search">
     <input type="text" name="q"/>
     <input type="submit" value="Tìm kiếm"/>
 </form>
