--- a/4. Git & HTML/Bai tap/cv.html
+++ b/4. Git & HTML/Bai tap/cv.html
@@ -5,6 +5,7 @@
     <title>My CV</title>
 </head>
 <body>
+<h2>My CV</h2>
 <ul>
     <li>Họ và tên:Nguyễn Văn Nam</li>
     <li>Địa chỉ: 35 Đề Thám P1 Vũng Tàu</li>
@@ -14,8 +15,8 @@
     <li>Học vấn: Đại học</li>
     <li>Bằng cấp: Cử nhân</li>
     <li>Kỹ năng: Tiếng Anh thành thạo, giao tiếp tốt</li>
-    <li>Kinh nghiệm: Giảng dạy tại trung tâm ABC</li>
-    <li>Định hướng phát triển cá nhân: trở thành 1 giảng viên chuyên nghiệp</li>
+    <li>Kinh nghiệm: <p>Giảng dạy tại trung tâm <a href="https://www.abcgreat.com">ABC</a> 2 năm <br> Sau đó giảng dạy tại nhà 1 năm</p></li>
+    <li>Định hướng phát triển cá nhân: Mở công ty đào tạo giảng viên chuyên nghiệp</li>
 </ul>
 </body>
 </html>
