--- a/B9. Cấu trúc điều kiện 2/Bài tập/[Bài tập] Luyện tập cấu trúc điều kiện 02/chuyen_do_dai.html
+++ b/B9. Cấu trúc điều kiện 2/Bài tập/[Bài tập] Luyện tập cấu trúc điều kiện 02/chuyen_do_dai.html
@@ -5,11 +5,10 @@
     <title>Title</title>
 </head>
 <body>
-<button type="button" onclick="showMessage();">Click Me!</button>
 <script>
-    function showMessage(){
-        document.write('Xin chào!');
-    }
+    let m = prompt('Nhập độ dài');
+    let f =m * 3.2808;
+    document.write("Độ dài là: " + f +' Feet');
 </script>
 </body>
 </html>
