--- a/B9. Cấu trúc điều kiện 2/Bài tập/[Bài tập] Luyện tập cấu trúc điều kiện 02/chuyen_nhiet_do.html
+++ b/B9. Cấu trúc điều kiện 2/Bài tập/[Bài tập] Luyện tập cấu trúc điều kiện 02/chuyen_nhiet_do.html
@@ -5,11 +5,10 @@
     <title>Title</title>
 </head>
 <body>
-<button type="button" onclick="showMessage();">Click Me!</button>
 <script>
-    function showMessage(){
-        document.write('Xin chào!');
-    }
+    let C = prompt('Nhập nhiệt độ', '');
+    let F = 9*C/5 + 32;
+    console.log('Nhiệt độ là: ', F, '  độ F');
 </script>
 </body>
 </html>
