--- a/B9. Cấu trúc điều kiện 2/Bài tập/[Bài tập] Luyện tập cấu trúc điều kiện 01/doyouloveme.html
+++ b/B9. Cấu trúc điều kiện 2/Bài tập/[Bài tập] Luyện tập cấu trúc điều kiện 01/doyouloveme.html
@@ -4,11 +4,7 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <style>
-        {
-            margin: 0;
-            padding: 0;
-            font-family: 'Raleway', sans-serif;
-        }
+
         #loveQuestion {
             position: absolute;
             left: 450px;
@@ -32,27 +28,29 @@
         }
         #btnNo {
             position: absolute;
-            left: 860px;
+            left: 890px;
             top: 450px;
             background-color: #f4511e;
-            transition: 0.3s;
+            transition: all 0.5s;
         }
     </style>
 </head>
-<body>
+<body style="height: 100vh; width: 100vw; position: relative; overflow: hidden">
     <h1 id="loveQuestion"> Do you love me?</h1>
     <input type="button" id="btnYes" value="YES" onclick="yesClick()" />
     <input type="button" id="btnNo" value="NO" onmouseover="noHover()" style="position: absolute" />
     <script>
         function yesClick() {
-         alert( "I Love you so much <3 ");
+         alert( "I'm waiting for you for a long time. I Love you so much <3 ");
             }
         function noHover() {
             var x = Math.floor(Math.random() * window.innerWidth);
             var y = Math.floor(Math.random() * window.innerHeight);
+
+            document.getElementById("btnNo").style.left = x + "px";
+            document.getElementById("btnNo").style.top = y + "px";
         }
-        document.getElementById("btnNo").style.left = x + "px";
-        document.getElementById("btnNo").style.top = y + "px";
+
         </script>
 </body>
 </html>
