--- a/B7. Biến, kiểu dữ liệu và toán tử/Bài tập/ud_may_tinh.html
+++ b/B7. Biến, kiểu dữ liệu và toán tử/Bài tập/ud_may_tinh.html
@@ -2,9 +2,57 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>Title</title>
 </head>
 <body>
-$END$
+<table>
+    <form action="" >
+        <tr>
+            <td colspan="2">
+                <input type="text" id="inputNum1" size="15">
+            </td>
+            <td colspan="2">
+                <input type="text" id="inputNum2" size="15">
+            </td>
+        </tr>
+        <tr>
+            <td> <button type="button" onclick="caculate1();" >(+)</button> </td>
+            <td> <button type="button" onclick="caculate2();">(-)</button> </td>
+            <td> <button type="button" onclick="caculate3();">(*)</button> </td>
+            <td> <button type="button" onclick="caculate4();">(/)</button> </td>
+        </tr>
+    </form>
+</table>
+<label for="">Result: </label>
+<textarea name="" id="demo" cols="30" rows="1"></textarea>
+
+</body>
+</html>
+<script>
+    function caculate1() {
+        let number1 = document.getElementById('inputNum1').value;
+        let number2 = document.getElementById('inputNum2').value;
+        let result = parseInt(number1) + parseInt(number2);
+        document.getElementById('demo').innerHTML='Addition: ' + result;
+    }
+    function caculate2() {
+        let number1 = document.getElementById('inputNum1').value;
+        let number2 = document.getElementById('inputNum2').value;
+        let result = parseInt(number1) - parseInt(number2);
+        document.getElementById('demo').innerHTML='Subtraction: ' + result;
+    }
+    function caculate3() {
+        let number1 = document.getElementById('inputNum1').value;
+        let number2 = document.getElementById('inputNum2').value;
+        let result = parseInt(number1) * parseInt(number2);
+        document.getElementById('demo').innerHTML='Multiplication: ' + result;
+    }
+    function caculate4() {
+        let number1 = document.getElementById('inputNum1').value;
+        let number2 = document.getElementById('inputNum2').value;
+        let result = parseInt(number1) / parseInt(number2);
+        document.getElementById('demo').innerHTML='Division: ' + parseFloat(result).toFixed(2);
+    }
+</script>
 </body>
 </html>
