--- a/B16. Lập trình hướng đối tượng 1/Thực hành/lop_date.html
+++ b/B16. Lập trình hướng đối tượng 1/Thực hành/lop_date.html
@@ -2,9 +2,46 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>Title</title>
 </head>
 <body>
-$END$
+    <script>
+        class MyDate { constructor (day, month, year) {
+
+            this.day = day;
+
+            this.month = month;
+
+            this.year = year;
+        }
+            getDay () {
+                return this.day;
+            }
+            getMonth () {
+                return this.month;
+            }
+            getYear () {
+                return this.year;
+            }
+            setDay (day) {
+                this.day = day;
+            }
+            setMonth (month) {
+                this.month = month;
+            }
+            setYear (year) {
+                this.year = year;
+            }
+        };
+            let date = new MyDate(3, 12, 2021);
+        date.setDay(10);
+        date.setMonth(10);
+        date.setYear(1998);
+           let day2 = date.getDay()
+        let month2 = date.getMonth()
+        let year2 = date.getYear()
+
+        alert(day2 + "/" + month2 + "/" + year2);
+    </script>
 </body>
 </html>
