--- a/B16. Lập trình hướng đối tượng 1/Thực hành/lop_hinh_tron.html
+++ b/B16. Lập trình hướng đối tượng 1/Thực hành/lop_hinh_tron.html
@@ -2,9 +2,33 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>Title</title>
 </head>
 <body>
-$END$
+<canvas id="myCanvas" width="300" height="300"></canvas>
+        <script>
+            class Circle { constructor(radius) {
+                this.radius = radius;
+            }
+                getRadius () {
+                    return this.radius;
+                }
+                getArea () {
+                    return Math.PI * radius * radius;
+                }
+                setRadius (radius) {
+                    this.radius = radius;
+                }
+            }
+            let circle = new Circle(20);
+            let radius = circle.getRadius();
+            let area = circle.getArea();
+            alert("radius: " + radius + "; area: " + area);
+            var c = document.getElementById("myCanvas");
+            var ctx = c.getContext("2d");
+            ctx.beginPath();
+            ctx.arc(75,70,20,0,2*Math.PI);
+            ctx.stroke();
+        </script>
 </body>
 </html>
