--- a/B12. Mảng 1/Thực hành/ban_co_caro.html
+++ b/B12. Mảng 1/Thực hành/ban_co_caro.html
@@ -2,9 +2,53 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>Bàn cờ caro</title>
+    <style type="text/css">
+        input [type = "text"] {
+            width = 20 px;
+        }
+    </style>
 </head>
 <body>
-$END$
+<h3>Caro Game Simple</h3>
+<div>
+    <p id="caro"></p>
+</div>
+<!-- <button type="button"> Change Value</button> -->
+<br>
+</body>
+</html>
+<script>
+    let b = document.getElementById('caro');
+    let board = [];
+    let data = "";
+    for (let i = 0; i < 5; i++) {
+        board[i] = new Array(0, 0, 0, 0, 0);
+    }
+
+    for(i=0;i<5;i++){
+        data=data+ '<br>';
+        for(j=0;j<5;j++){
+            data=data+ board[i][j] +  '&nbsp;&nbsp;'
+        }
+    }
+    data += "<br/><br/><input type='button' value='Change Value' onclick='changeValue()'>"
+    b.innerHTML = data;
+    function changeValue(){
+        let positionX = parseInt(prompt("X: "));
+        let positionY = parseInt(prompt("Y: "));
+        data = '';
+        board[positionX -1][positionY-1]='x';
+        for(i=0;i<5;i++){
+            data=data+ '<br>';
+            for(j=0;j<5;j++){
+                data=data+ board[i][j] +  '&nbsp;&nbsp;';
+            }
+        }
+        data += "<br/><br/><input type='button' value='Change Value' onclick='changeValue()'>"
+        b.innerHTML = data;
+    }
+</script>
+
 </body>
 </html>
