--- a/B17. Lập trình hướng đối tượng 2/Bài tập/game_don_gian.html
+++ b/B17. Lập trình hướng đối tượng 2/Bài tập/game_don_gian.html
@@ -2,9 +2,95 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
-</head>
-<body>
-$END$
+    <title>Title</title>
+    <div id="game"></div>    <script src="script.js"></script>
+    <style>
+    Hero {
+    position: absolute;
+    left: 890px;
+    top: 500px;
+
+    transition: all 0.1s;
+    }
+    </style>
+<body onload="docReady()">​
+<form>
+    <img id="pikachu" src="pikachu.jpg" style="position:absolute;left:50px; top:50px;" height="100" />
+    <br><br><br><br><br><br><br>
+    <input type="button" value="Move Up" onclick="upArrowPressed();" />
+    <input type="button" value="Move Right" onclick="rightArrowPressed();" />
+    <input type="button" value="Move Left" onclick="leftArrowPressed();" />
+    <input type="button" value="Move Down" onclick="downArrowPressed();" />
+
+</form>
+<script>
+
+    function upArrowPressed() {
+        let element = document.getElementById("pikachu");
+        element.style.top = parseInt(element.style.top) - 5 + 'px';
+    }
+    function downArrowPressed() {
+        var element1 = document.getElementById("pikachu");
+        element1.style.top = parseInt(element1.style.top) + 5 + 'px';
+    }
+    function leftArrowPressed() {
+        var element2 = document.getElementById("pikachu");
+        element2.style.left = parseInt(element2.style.left) - 5 + 'px';
+    }
+    function rightArrowPressed() {
+        var element3 = document.getElementById("pikachu");
+        element3.style.left = parseInt(element3.style.left) + 5 + 'px';
+
+    }
+    function moveSelection(evt) {
+        switch (evt.keyCode) {
+            case 37:
+                leftArrowPressed();
+                break;
+            case 39:
+                rightArrowPressed();
+                break;
+            case 38:
+                upArrowPressed();
+                break;
+            case 40:
+                downArrowPressed();
+                break;
+        }
+    }
+    function docReady() {
+        window.addEventListener('keydown', moveSelection);
+    }
+
+            function Hero(image, top, left, size){
+                this.image = image;
+                this.top = top;
+                this.left = left;
+                this.size = size;
+
+                this.getHeroElement = function() {
+                    return '<img width="'+ this.size + '"' +
+                        ' height="'+ this.size + '"' +
+                        ' src="' + this.image +'"' +
+                        ' style="top: '+this.top+'px; left:'+this.left+'px;position:absolute;" />';
+                }
+                this.moveRight = function(){
+                    this.left += 20;
+                    console.log('ok: ' + this.left);
+                }
+            }
+
+            var hero = new Hero('pikachu.jpg', 200, 30, 200);
+
+            function start() {
+                if (hero.left < window.innerWidth - hero.size) {
+                    hero.moveRight();
+                }
+                document.getElementById('game').innerHTML = hero.getHeroElement();
+                setTimeout(start, 100);
+            }
+
+            start();
+        </script>
 </body>
 </html>
