--- a/B17. Lập trình hướng đối tượng 2/Thực hành/mo_phong_den_pin.html
+++ b/B17. Lập trình hướng đối tượng 2/Thực hành/mo_phong_den_pin.html
@@ -2,9 +2,74 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>Title</title>
 </head>
 <body>
-$END$
+        <script>
+            class Battery {
+                constructor(energy) {
+                    this.energy = energy;
+                }
+                getEnergy  () {
+                    return this.energy;
+                }
+                setEnergy  (energy) {
+                    this.energy = energy;
+                }
+                decreaseEnergy(energy) {
+                    if (this.energy > 0) {
+                        this.energy--;
+                    }
+                    return this.energy;
+            }
+
+            }
+            class FlashLamp {
+                constructor(battery, status) {
+                   this.battery = battery;
+                   this.status = status;
+                    }
+                getBatteryInfor  () {
+                    return this.battery.getEnergy();
+                }
+                setBattery  (battery) {
+                    this.battery = battery;
+                }
+                light () {
+                    if(this.status){
+                        alert("Lighting");
+                    } else {
+                        alert("Not lighting");
+                    }
+                    return ;
+                }
+                turnOn  () {
+                    this.status = true;
+                };
+
+                turnOff () {
+                    this.status = false;
+                }
+
+            }
+            let battery = new Battery();
+            battery.setEnergy(10);
+
+            let flashLamp = new FlashLamp();
+            flashLamp.setBattery(battery);
+            document.write("Battery info:" + flashLamp.getBatteryInfor() + "<br/>");
+            flashLamp.light();
+
+            document.write("Turn on<br/>")
+            flashLamp.turnOn();
+
+            // flashLamp.light();
+            // document.write("Battery info:" + flashLamp.getBatteryInfor() + "<br/>");
+            //
+            // document.write("Turn off<br/>")
+            // flashLamp.turnOff();
+
+
+        </script>
 </body>
 </html>
